# clinicalbuddy_backend

./: README.md  app.py  clinicalbuddy_backend.pem  cloudflare.key  cloudflare.pem  pyproject.toml  serviceAccountKey.json
config/: clients.py  constants.py
firestore/: firestore.py
helpers/: constants.py  conversation_helpers.py  core.py  helpers.py  pdf_helpers.py
models/: models.py
qdrant/: qdrant.py
routes/: routes.py
